# scrs

./: Cargo.toml  Jenkinsfile  README.md
scrs-sc-transcode/: Cargo.toml
scrs-serve/: Cargo.toml  config-example.toml
scrs-serve/src/: config.rs  handler.rs  main.rs  metadata.rs  stream.rs
