[package]
name = "scrs"
version = "0.1.0"
authors = ["Jordan Doyle <jordan@doyle.la>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bus_queue = "0.5"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
http = "0.2"
env_logger = "0.7"
bytes = "0.5"
httparse = "1.3"
clap = "2.33"
derive_more = "0.99"