[package]
name = "scrs"
version = "0.1.0"
authors = ["Jordan Doyle <jordan@doyle.la>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bus_queue = { git = "https://github.com/filipdulic/bus-queue.git", rev = "48796ef8b56fb352effa9afb0c4c05b7c795d633" }
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
http = "0.2"
slog = ""
slog-async = ""
slog-term = ""
thiserror = "1.0"
bytes = "0.5"
httparse = "1.3"
derive_more = "0.99"
arc-swap = "0.4"
url = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
mime = "0.3"
ustr = "0.7"
clap = "3.0.0-beta.1"
toml = "0.5"
